[gd_scene load_steps=4 format=3 uid="uid://cqyl0ps58w4gw"]

[ext_resource type="Theme" uid="uid://c3kwn6d20ipja" path="res://GUI/styles/dialogue_gui_theme.tres" id="1_bkns3"]
[ext_resource type="Script" path="res://GUI/main_menu/save_menu.gd" id="2_8055w"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_v6jda"]
color = Color(1, 0.678431, 0.364706, 1)
grow_begin = 100.0
grow_end = 100.0
thickness = 2

[node name="SaveMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_bkns3")
script = ExtResource("2_8055w")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(400, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control2" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Select Save"
horizontal_alignment = 1

[node name="Control3" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_v6jda")

[node name="Save1" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "save 1"

[node name="Save2" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "save 2"

[node name="Save3" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "save 3
"

[node name="Save4" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "save 4"

[node name="Save5" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "save 4
"

[node name="Control" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Cancel" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "cancel
"
