class_name SaveMenu extends Control

@onready var save_1_btn: Button = $Panel/VBoxContainer/Save1
@onready var save_2_btn: Button = $Panel/VBoxContainer/Save2
@onready var save_3_btn: Button = $Panel/VBoxContainer/Save3
@onready var save_4_btn: Button = $Panel/VBoxContainer/Save4
@onready var save_5_btn: Button = $Panel/VBoxContainer/Save5
@onready var cancel_btn: Button = $Panel/VBoxContainer/Cancel

func prep(saves: Array[PackedScene]):
	pass
